# FreecellAI

./: .gitignore  CMakeLists.txt  README.md  game.cpp
src/: .GameState.h.swp  ASCIIviz.cpp  ASCIIviz.h  CMakeLists.txt  Card.cpp  Card.h  CustomHeuristic.cpp  CustomHeuristic.h  GameState.cpp  GameState.h  Heuristic.h  Move.h
src/game_logic/: Card.h  GameState.cpp  GameState.h  Move.cpp
src/solver/: AStar.cpp  AStar.h  CMakeLists.txt  CustomHeuristic.cpp  CustomHeuristic.h  Heuristic.h
test/: CMakeLists.txt  test1.cpp
test/notes/: strange.bd
